--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -14,8 +14,6 @@
       sizes="180x180"
       href="/apple-icon-180x180.png"
     />
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Physio an der Enz</title>
   </head>
