added meta daten

--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- SEO: Titel und Beschreibung -->
+    <title>
+      Physio an der Enz – Moderne Physiotherapie mit Herz in der Nähe von
+      Pforzheim
+    </title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Moderne Praxis für Physiotherapie in der Nähe von Pforzheim. Persönliche Betreuung, effektive Therapien und fundiertes Wissen – direkt vor Ort in Enzklösterle."
     />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Social Media Vorschau (Open Graph) -->
+    <meta
+      property="og:title"
+      content="Physio an der Enz – Moderne Physiotherapie mit Herz"
+    />
+    <meta
+      property="og:description"
+      content="Kompetente und einfühlsame Physiotherapie in Enzklösterle bei Pforzheim. Die Therapeutin ist in Deutschland ausgebildet und arbeitet mit modernen, individuellen Methoden."
+    />
+    <meta
+      property="og:image"
+      content="https://www.physio-an-der-enz.de/social-preview.jpg"
+    />
+    <meta property="og:url" content="https://www.physio-an-der-enz.de/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Apple Touch Icon -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="/apple-icon-180x180.png"
     />
-
-    <title>Physio an der Enz</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript
+      >Bitte aktivieren Sie JavaScript, um diese Website zu nutzen.</noscript
+    >
     <div id="root"></div>
   </body>
 </html>
